--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
       - uses: denolib/setup-deno@v1.1.0
         with:
           deno-version: 0.29.0
-      - run: deno -A tests/test.ts
+      - run: deno -A test.ts
